<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BA9D9D">

    <EditText
        android:id="@+id/txtEmpiezaCita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:autofillHints="EmpiezaCita"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/txtAcabaCita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.649"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btnAnadirCita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:text="@string/btnEnviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.616"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtAcabaCita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:autofillHints="AcabaCita"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/btnAnadirCita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.649"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/txtLugarCita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:autofillHints="LugarCita"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/LugarCita"
        app:layout_constraintBottom_toTopOf="@+id/txtEmpiezaCita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.649"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/txtTituloCita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="TituloCita"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/TituloCita"
        app:layout_constraintBottom_toTopOf="@+id/txtLugarCita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.649"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.867"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/txvAcabaCita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="208dp"
        android:text="@string/FinalCita"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtAcabaCita"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txvEmpiezaCita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/PrincipioCita"
        app:layout_constraintBottom_toTopOf="@+id/txvAcabaCita"
        app:layout_constraintEnd_toStartOf="@+id/txtEmpiezaCita"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>